--- a/index.html
+++ b/index.html
@@ -342,9 +342,15 @@
       padding: 2px 4px;
     }
 
-    .thread-menu-btn .icon {
+    .thread-menu-btn .icon,
+    .thread-menu-btn .emoji-icon {
       width: 16px;
       height: 16px;
+    }
+
+    .thread-menu-btn .emoji-icon {
+      font-size: 16px;
+      flex: 0 0 16px;
     }
 
     .thread-menu-btn:hover {
@@ -452,7 +458,20 @@
       color: currentColor;
     }
 
-    .icon + span {
+    .emoji-icon {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 18px;
+      height: 18px;
+      flex: 0 0 18px;
+      font-size: 18px;
+      line-height: 1;
+      font-family: 'Apple Color Emoji', 'Segoe UI Emoji', 'Noto Color Emoji', system-ui, sans-serif;
+    }
+
+    .icon + span,
+    .emoji-icon + span {
       margin-left: 6px;
     }
 
@@ -484,7 +503,8 @@
       outline-offset: 2px;
     }
 
-    .icon-btn .icon {
+    .icon-btn .icon,
+    .icon-btn .emoji-icon {
       width: 18px;
       height: 18px;
     }
@@ -630,6 +650,14 @@
     .theme-toggle-btn .icon {
       width: 20px;
       height: 20px;
+    }
+
+    .about-btn .emoji-icon,
+    .theme-toggle-btn .emoji-icon {
+      width: 20px;
+      height: 20px;
+      font-size: 20px;
+      flex: 0 0 20px;
     }
 
     .about-btn:focus-visible,
@@ -1053,66 +1081,15 @@
     aria-hidden="true"
     focusable="false"
   >
-    <symbol id="icon-import" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M3 13.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1 0-1zM7.25 1.5a.75.75 0 0 1 .75.75v5.69l2.22-2.22a.75.75 0 1 1 1.06 1.06l-3.5 3.5a.75.75 0 0 1-1.06 0l-3.5-3.5A.75.75 0 1 1 3.28 5.72L5.5 7.94V2.25a.75.75 0 0 1 .75-.75z"
-      />
-    </symbol>
-    <symbol id="icon-export" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M3 13.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1 0-1zM8.75 8.81V2.25a.75.75 0 0 0-1.5 0v6.56L5.03 6.59a.75.75 0 1 0-1.06 1.06l3.5 3.5a.75.75 0 0 0 1.06 0l3.5-3.5a.75.75 0 1 0-1.06-1.06L8.75 8.81z"
-      />
-    </symbol>
-    <symbol id="icon-info" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M8 1.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13zM8 4.25a.875.875 0 1 1 0 1.75.875.875 0 0 1 0-1.75zM7 7.75h2v5H7z"
-      />
-    </symbol>
-    <symbol id="icon-sun" viewBox="0 0 24 24" fill="currentColor">
-      <path
-        d="M12 18a6 6 0 1 0 0-12 6 6 0 0 0 0 12zm0-16a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0V3a1 1 0 0 1 1-1zm0 18a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1zm9-7a1 1 0 0 1-1 1h-2a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1zm-14 0a1 1 0 0 1-1 1H4a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1zm11.07-7.07a1 1 0 0 1 0 1.41L17.66 6.76a1 1 0 1 1-1.41-1.41l1.41-1.41a1 1 0 0 1 1.41 0zM7.76 16.24a1 1 0 0 1 0 1.41L6.34 19.07a1 1 0 0 1-1.41-1.41l1.41-1.41a1 1 0 0 1 1.41 0zM18.07 17.66a1 1 0 0 1-1.41 0l-1.41-1.41a1 1 0 1 1 1.41-1.41l1.41 1.41a1 1 0 0 1 0 1.41zM8.24 7.76a1 1 0 0 1-1.41 0L5.41 6.34A1 1 0 0 1 6.83 4.93l1.41 1.41a1 1 0 0 1 0 1.42z"
-      />
-    </symbol>
-    <symbol id="icon-moon" viewBox="0 0 24 24" fill="currentColor">
-      <path
-        d="M21 12.79A9 9 0 0 1 11.21 3a7 7 0 1 0 9.79 9.79z"
-      />
-    </symbol>
     <symbol id="icon-github" viewBox="0 0 16 16" fill="currentColor">
       <path
         fill-rule="evenodd"
         d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0 0 16 8c0-4.42-3.58-8-8-8z"
       />
     </symbol>
-    <symbol id="icon-menu" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M1.75 3.5h12.5a.75.75 0 0 1 0 1.5H1.75a.75.75 0 0 1 0-1.5Zm0 3.75h12.5a.75.75 0 0 1 0 1.5H1.75a.75.75 0 0 1 0-1.5Zm0 3.75h12.5a.75.75 0 0 1 0 1.5H1.75a.75.75 0 0 1 0-1.5Z"
-      />
-    </symbol>
-    <symbol id="icon-close" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M3.72 3.72a.75.75 0 0 1 1.06 0L8 6.94l3.22-3.22a.75.75 0 1 1 1.06 1.06L9.06 8l3.22 3.22a.75.75 0 1 1-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 1 1-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 0 1 0-1.06Z"
-      />
-    </symbol>
-    <symbol id="icon-download" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M8 1.25a.75.75 0 0 1 .75.75v6.19l2.22-2.22a.75.75 0 0 1 1.06 1.06l-3.5 3.5a.75.75 0 0 1-1.06 0l-3.5-3.5A.75.75 0 0 1 4.03 5.97L6.25 8.19V2a.75.75 0 0 1 .75-.75zM3 13.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1 0-1z"
-      />
-    </symbol>
     <symbol id="icon-qr" viewBox="0 0 16 16" fill="currentColor">
       <path
         d="M2 2h4v4H2V2Zm1 1v2h2V3H3Zm6-1h4v4H9V2Zm1 1v2h2V3h-2ZM2 9h4v5H2V9Zm1 1v3h2v-3H3Zm6-1h2v2H9V9Zm3 0h2v2h-2V9Zm-3 3h2v2H9v-2Zm3 0h2v2h-2v-2Zm0 3h1v1h-1v-1Zm-3 0h1v1H9v-1Z"
-      />
-    </symbol>
-    <symbol id="icon-plus" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M8 1a.75.75 0 0 1 .75.75v5.5h5.5a.75.75 0 0 1 0 1.5h-5.5v5.5a.75.75 0 0 1-1.5 0v-5.5h-5.5a.75.75 0 0 1 0-1.5h5.5v-5.5A.75.75 0 0 1 8 1z"
-      />
-    </symbol>
-    <symbol id="icon-refresh" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        fill-rule="evenodd"
-        d="M8 3a5 5 0 1 0 4.546 2.914.75.75 0 1 1 1.363-.65A6.5 6.5 0 1 1 8 1.5V0l2.25 2.25L8 4.5V3z"
       />
     </symbol>
     <symbol id="icon-eye" viewBox="0 0 16 16" fill="currentColor">
@@ -1129,44 +1106,6 @@
         d="M6.28 6.28 8 8l1.72 1.72A1.75 1.75 0 0 1 6.28 6.28zm2.44-1.03a3.25 3.25 0 0 1 3.03 3.03.75.75 0 0 1-1.49.17 1.75 1.75 0 0 0-1.7-1.7.75.75 0 0 1 .16-1.5z"
       />
     </symbol>
-    <symbol id="icon-copy" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M4.5 1A1.5 1.5 0 0 0 3 2.5v9A1.5 1.5 0 0 0 4.5 13H5V4.5A2.5 2.5 0 0 1 7.5 2h5A1.5 1.5 0 0 0 11 0.5h-6.5z"
-      />
-      <path
-        d="M7.5 3A1.5 1.5 0 0 0 6 4.5v9A1.5 1.5 0 0 0 7.5 15h7a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 3h-7z"
-      />
-    </symbol>
-    <symbol id="icon-more-vertical" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M8 3a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2zm0 6a1 1 0 1 1 0-2 1 1 0 0 1 0 2z"
-      />
-    </symbol>
-    <symbol id="icon-edit" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M12.854 1.146a.5.5 0 0 0-.708 0L5 8.293V11h2.707l7.146-7.146a.5.5 0 0 0 0-.708l-1-1a.5.5 0 0 0-.707 0z"
-      />
-      <path d="M4 12.5V8.707l-2 2V14h3.293l2-2H4.5a.5.5 0 0 1-.5-.5z" />
-    </symbol>
-    <symbol id="icon-trash" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M6.5 1a1.5 1.5 0 0 0-1.415 1H3a.75.75 0 0 0 0 1.5h10a.75.75 0 0 0 0-1.5h-2.085A1.5 1.5 0 0 0 9.5 1h-3zM4.5 5.5a.5.5 0 0 1 .5.5v6.75a1.75 1.75 0 0 0 1.75 1.75h2.5A1.75 1.75 0 0 0 11 12.75V6a.5.5 0 0 1 1 0v6.75A2.75 2.75 0 0 1 9.25 15.5h-2.5A2.75 2.75 0 0 1 4 12.75V6a.5.5 0 0 1 .5-.5z"
-      />
-      <path d="M6.75 6a.5.5 0 0 0-.5.5v6a.5.5 0 1 0 1 0v-6a.5.5 0 0 0-.5-.5zm2 0a.5.5 0 0 0-.5.5v6a.5.5 0 1 0 1 0v-6a.5.5 0 0 0-.5-.5z" />
-    </symbol>
-    <symbol id="icon-link" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M6.354 4.146a3.5 3.5 0 0 1 4.95 0l.55.55a3.5 3.5 0 0 1 0 4.95l-.707.707a.75.75 0 0 1-1.06-1.06l.707-.708a2 2 0 0 0 0-2.828l-.55-.55a2 2 0 0 0-2.828 0l-.708.707a.75.75 0 1 1-1.06-1.06l.707-.708z"
-      />
-      <path
-        d="M9.646 11.854a3.5 3.5 0 0 1-4.95 0l-.55-.55a3.5 3.5 0 0 1 0-4.95l.707-.707a.75.75 0 0 1 1.06 1.06l-.707.708a2 2 0 0 0 0 2.828l.55.55a2 2 0 0 0 2.828 0l.708-.707a.75.75 0 0 1 1.06 1.06l-.707.708z"
-      />
-    </symbol>
-    <symbol id="icon-send" viewBox="0 0 16 16" fill="currentColor">
-      <path
-        d="M15.854.146a.5.5 0 0 1 .058.638l-.058.07-9.5 9.5a.5.5 0 0 1-.233.131l-.095.015-4 1a.5.5 0 0 1-.607-.607l.02-.074 1-4a.5.5 0 0 1 .116-.217l.063-.06 9.5-9.5a.5.5 0 0 1 .765.638L12.207 5.5 7.5 10.207 5.793 8.5 13.646.646 15.146 2.146 14.5 2.793 15.854.146Z"
-      />
-    </symbol>
   </svg>
   <div id="app">
     <!-- Sidebar containing configuration and thread list -->
@@ -1174,7 +1113,7 @@
       <div class="sidebar-header">
         <h2>Settings</h2>
         <button type="button" id="closeSidebarBtn" class="sidebar-close" aria-label="Close settings">
-          <svg class="icon" aria-hidden="true"><use href="#icon-close"></use></svg>
+          <span class="emoji-icon" aria-hidden="true">❌</span>
         </button>
       </div>
       <div class="form-group">
@@ -1195,7 +1134,7 @@
         <label for="modelSelect">Model</label>
         <div class="model-select-row">
           <button type="button" id="refreshModelsBtn">
-            <svg class="icon" aria-hidden="true"><use href="#icon-refresh"></use></svg>
+            <span class="emoji-icon" aria-hidden="true">🔄</span>
             <span class="btn-label">Refresh model list</span>
           </button>
           <select id="modelSelect"></select>
@@ -1239,7 +1178,7 @@
             aria-label="Copy token"
             title="Copy token"
           >
-            <svg class="icon" aria-hidden="true"><use href="#icon-copy"></use></svg>
+            <span class="emoji-icon" aria-hidden="true">📋</span>
             <span class="sr-only">Copy token to clipboard</span>
           </button>
         </div>
@@ -1259,7 +1198,7 @@
             title="Export chat history"
             aria-label="Export chat history"
           >
-            <svg class="icon" aria-hidden="true"><use href="#icon-export"></use></svg>
+            <span class="emoji-icon" aria-hidden="true">📤</span>
           </button>
           <button
             type="button"
@@ -1268,7 +1207,7 @@
             title="Import chat history"
             aria-label="Import chat history"
           >
-            <svg class="icon" aria-hidden="true"><use href="#icon-import"></use></svg>
+            <span class="emoji-icon" aria-hidden="true">📥</span>
           </button>
           <input type="file" id="importInput" accept="application/json" style="display: none;" />
         </div>
@@ -1281,7 +1220,7 @@
             title="Export settings"
             aria-label="Export settings"
           >
-            <svg class="icon" aria-hidden="true"><use href="#icon-export"></use></svg>
+            <span class="emoji-icon" aria-hidden="true">📤</span>
           </button>
           <button
             type="button"
@@ -1290,7 +1229,7 @@
             title="Import settings"
             aria-label="Import settings"
           >
-            <svg class="icon" aria-hidden="true"><use href="#icon-import"></use></svg>
+            <span class="emoji-icon" aria-hidden="true">📥</span>
           </button>
           <button
             type="button"
@@ -1308,7 +1247,7 @@
             title="Copy share link"
             aria-label="Copy share link"
           >
-            <svg class="icon" aria-hidden="true"><use href="#icon-link"></use></svg>
+            <span class="emoji-icon" aria-hidden="true">🔗</span>
           </button>
           <input type="file" id="importConfigInput" accept="application/json" style="display: none;" />
         </div>
@@ -1320,7 +1259,7 @@
     <main class="chat-area">
       <div id="chatHeader" class="chat-header">
         <button type="button" id="openSidebarBtn" class="mobile-toggle" aria-label="Open settings">
-          <svg class="icon" aria-hidden="true"><use href="#icon-menu"></use></svg>
+          <span class="emoji-icon" aria-hidden="true">☰</span>
         </button>
         <input type="text" id="threadTitleInput" class="thread-title" placeholder="Chat title" />
         <button
@@ -1330,7 +1269,7 @@
           aria-label="Toggle theme"
           aria-pressed="false"
         >
-          <svg class="icon" aria-hidden="true"><use href="#icon-sun"></use></svg>
+          <span class="emoji-icon" aria-hidden="true">☀️</span>
           <span class="sr-only">Toggle theme</span>
         </button>
         <button
@@ -1341,7 +1280,7 @@
           aria-haspopup="dialog"
           aria-expanded="false"
         >
-          <svg class="icon" aria-hidden="true"><use href="#icon-info"></use></svg>
+          <span class="emoji-icon" aria-hidden="true">ℹ️</span>
         </button>
       </div>
       <div id="promoBanner" class="promo-banner" role="region" aria-label="Journal Foundation notice" hidden>
@@ -1351,7 +1290,7 @@
           Save this page to run it offline.
         </span>
         <button id="dismissPromoBtn" class="dismiss" aria-label="Dismiss notice">
-          <svg class="icon" aria-hidden="true"><use href="#icon-close"></use></svg>
+          <span class="emoji-icon" aria-hidden="true">❌</span>
         </button>
       </div>
       <div id="chatNotice" class="chat-notice" role="status" aria-live="polite" hidden></div>
@@ -1380,7 +1319,7 @@
           <div id="messageInputOverlay" class="message-input-overlay" aria-hidden="true"></div>
         </div>
         <button type="submit" id="sendBtn">
-          <svg class="icon" aria-hidden="true"><use href="#icon-send"></use></svg>
+          <span class="emoji-icon" aria-hidden="true">📩</span>
           <span class="btn-label">Send</span>
         </button>
       </form>
@@ -1393,7 +1332,7 @@
   <div id="aboutModal" class="modal" role="dialog" aria-modal="true" aria-labelledby="aboutTitle" hidden>
     <div class="sheet" role="document">
       <button type="button" class="modal-close" id="aboutCloseBtn" aria-label="Close">
-        <svg class="icon" aria-hidden="true"><use href="#icon-close"></use></svg>
+        <span class="emoji-icon" aria-hidden="true">❌</span>
       </button>
       <h2 id="aboutTitle">Private &amp; Local — About this demo</h2>
       <p><strong>This is a single static HTML file.</strong> There is no backend, no database, and nothing on a server to capture your data. Your chats are stored in your browser.</p>
@@ -1427,7 +1366,7 @@
 
       <div class="cta-row">
         <button id="downloadPageBtn" class="primary">
-          <svg class="icon" aria-hidden="true"><use href="#icon-download"></use></svg>
+          <span class="emoji-icon" aria-hidden="true">⬇️</span>
           <span class="btn-label">Download this page</span>
         </button>
       </div>
@@ -1447,7 +1386,7 @@
   >
     <div class="sheet" role="document">
       <button type="button" class="modal-close" id="configQrCloseBtn" aria-label="Close">
-        <svg class="icon" aria-hidden="true"><use href="#icon-close"></use></svg>
+        <span class="emoji-icon" aria-hidden="true">❌</span>
       </button>
       <h2 id="configQrTitle">Share settings via QR code</h2>
       <p>Scan this QR code on another device to import these chat settings instantly.</p>
@@ -1524,14 +1463,12 @@
       const configQrCode = document.getElementById('configQrCode');
       const copyConfigLinkBtn = document.getElementById('copyConfigLinkBtn');
 
-      const createIcon = symbolId => {
-        const svg = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
-        svg.setAttribute('class', 'icon');
-        svg.setAttribute('aria-hidden', 'true');
-        const use = document.createElementNS('http://www.w3.org/2000/svg', 'use');
-        use.setAttribute('href', `#${symbolId}`);
-        svg.appendChild(use);
-        return svg;
+      const createEmoji = char => {
+        const span = document.createElement('span');
+        span.className = 'emoji-icon';
+        span.setAttribute('aria-hidden', 'true');
+        span.textContent = char;
+        return span;
       };
 
       // Application state
@@ -1566,9 +1503,9 @@
 
       function updateThemeToggle(resolvedTheme, preference) {
         if (!themeToggleBtn) return;
-        const iconUse = themeToggleBtn.querySelector('use');
-        if (iconUse) {
-          iconUse.setAttribute('href', resolvedTheme === 'dark' ? '#icon-moon' : '#icon-sun');
+        const themeIcon = themeToggleBtn.querySelector('.emoji-icon');
+        if (themeIcon) {
+          themeIcon.textContent = resolvedTheme === 'dark' ? '🌙' : '☀️';
         }
         const followingSystem = preference !== 'light' && preference !== 'dark';
         const labelAction = resolvedTheme === 'dark' ? 'Switch to light theme' : 'Switch to dark theme';
@@ -2731,7 +2668,7 @@ const base64UrlEncode = value => {
         const createBtn = document.createElement('button');
         createBtn.type = 'button';
         createBtn.classList.add('new-thread-button');
-        createBtn.appendChild(createIcon('icon-plus'));
+        createBtn.appendChild(createEmoji('➕'));
         const createLabel = document.createElement('span');
         createLabel.classList.add('btn-label');
         createLabel.textContent = 'Start new chat';
@@ -2758,7 +2695,7 @@ const base64UrlEncode = value => {
           menuBtn.type = 'button';
           menuBtn.classList.add('thread-menu-btn');
           menuBtn.setAttribute('aria-label', `Options for ${threadName}`);
-          menuBtn.appendChild(createIcon('icon-more-vertical'));
+          menuBtn.appendChild(createEmoji('⋮'));
           menuBtn.addEventListener('click', event => {
             event.stopPropagation();
             toggleThreadMenu(thread.id, menuBtn);
@@ -3065,7 +3002,7 @@ const base64UrlEncode = value => {
 
         const renameBtn = document.createElement('button');
         renameBtn.type = 'button';
-        renameBtn.appendChild(createIcon('icon-edit'));
+        renameBtn.appendChild(createEmoji('✏️'));
         const renameLabel = document.createElement('span');
         renameLabel.classList.add('btn-label');
         renameLabel.textContent = 'Rename';
@@ -3078,7 +3015,7 @@ const base64UrlEncode = value => {
 
         const exportThreadBtn = document.createElement('button');
         exportThreadBtn.type = 'button';
-        exportThreadBtn.appendChild(createIcon('icon-export'));
+        exportThreadBtn.appendChild(createEmoji('📤'));
         const exportLabel = document.createElement('span');
         exportLabel.classList.add('btn-label');
         exportLabel.textContent = 'Export (.md)';
@@ -3091,7 +3028,7 @@ const base64UrlEncode = value => {
 
         const deleteBtn = document.createElement('button');
         deleteBtn.type = 'button';
-        deleteBtn.appendChild(createIcon('icon-trash'));
+        deleteBtn.appendChild(createEmoji('🗑️'));
         const deleteLabel = document.createElement('span');
         deleteLabel.classList.add('btn-label');
         deleteLabel.textContent = 'Delete';
@@ -3105,7 +3042,7 @@ const base64UrlEncode = value => {
 
         const copyLinkBtn = document.createElement('button');
         copyLinkBtn.type = 'button';
-        copyLinkBtn.appendChild(createIcon('icon-link'));
+        copyLinkBtn.appendChild(createEmoji('🔗'));
         const copyLabel = document.createElement('span');
         copyLabel.classList.add('btn-label');
         copyLabel.textContent = 'Copy link with current title/system/prompt';
